# plant-water-tracker

./: .gitmodules  CMakeLists.txt  README.md  vcpkg_x64-windows.txt  workspace.code-workspace
src/: main.cpp  serialize.cpp  serialize.hpp
